Fix navbar issue on iOS7. Add _open and _end markups to mw-app.js, add concat task of grunt.

--- a/assets/scss/mobile/_dialogs.scss
+++ b/assets/scss/mobile/_dialogs.scss
@@ -1,7 +1,7 @@
 #dialog-overlay {
 	width: 100%;
 	height: 100%;
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: 0;
 	background-color: rgba(#333, 0.1);
