--- a/assets/scss/mobile/_layouts.scss
+++ b/assets/scss/mobile/_layouts.scss
@@ -5,16 +5,20 @@ $view-max-width: 400px;
 
 html {
 	height: 100%;
+	&.iOS7 {
+	   padding-top: 20px;
+	}
 }
 
 body {
 	height: 100%;
 	overflow: hidden;
 	background-color: $bodyBackground;
+	position: relative;
 }
 
 .view {
-	position: fixed;
+	position: absolute;
 	top: 0;
 	@include size(100%, 100%);
 	padding: $navbarHeight 0 0 0;
@@ -93,7 +97,7 @@ body {
 }
 
 #apploader {
-	position: fixed;
+	position: absolute;
 	width: 100%;
 	height: 100%;
 	bottom: -44px;
